<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00E7DCDC"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:layout_gravity="center"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/loadingImageView"
        android:layout_width="80dp"
        android:layout_height="80dp" />
    <TextView
        android:id="@+id/mainscreenmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:text="Registering your entry in Society \n Please wait"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E7DCDC"
        android:gravity="start"
        android:hint="@string/UUID"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00E7DCDC"
        android:hint="@string/Name"
        android:text="@string/Trial_User"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <TextView
        android:id="@+id/vehicle_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00E7DCDC"
        android:ems="10"
        android:visibility="gone"
        android:hint="@string/Vehicle_Number"
        android:text="@string/KA_01_XXXX"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:visibility="gone"
        android:text="@string/start_scan" />


</LinearLayout>